feat: deck api docs
