# backend/apis/deck/router.ts
@@ -3,12 +3,13 @@ import {deckController} from "./controller";
 
 export const deckRouter = Router();
 
+deckRouter.get("/", deckController.getAll);
 deckRouter.post("/", deckController.post);
-deckRouter.post("/:id", deckController.put);
+deckRouter.put("/:id", deckController.put);
 deckRouter.get("/:deckId", deckController.get);
 deckRouter.delete("/:deckId", deckController.remove);
 deckRouter.put("/:deckId", deckController.put);
+deckRouter.post("/:deckId", deckController.createCard);
 deckRouter.get("/:deckId/cards", deckController.getAllCards);
-deckRouter.post("/:deckId/card", deckController.createCard);
-deckRouter.post("/:deckId/tag/:tagId", deckController.addTag);
+deckRouter.post("/:deckId/tag/", deckController.addTag);
 deckRouter.delete("/:deckId/tag/:tagId", deckController.removeTag);
